--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    <div id="projectname">Polygonal
    &#160;<span id="projectnumber">1.0</span>
    </div>
-   <div id="projectbrief">minimal MVC for 3d scenes</div>
+   <div id="projectbrief">minimal 3d scene graph management</div>
   </td>
  </tr>
  </tbody>
